# ucar-test-task

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
nginx/: Dockerfile  backend.conf  nginx.conf
src/: __main__.py
src/config/: __init__.py  logging.py  settings.py
src/db/: alembic.ini
src/db/connection/: __init__.py  session.py
src/db/migrations/: env.py
src/db/migrations/versions/: 628f46aa3697_.py
src/db/models/: __init__.py  base.py  incident.py
src/dispatcher/: __init__.py  dispatcher.py
src/repositories/: abstract.py  base.py  incident.py
src/routers/: __init__.py  incident.py
src/schemas/: base.py  exceptions.py  incident.py
src/services/: __init__.py  incident.py
src/utils/: enums.py  exceptions.py  healthcheck.py
