[project]
name = "incident-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.121.0,<0.122.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "orjson (>=3.11.4,<4.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "ruff (>=0.14.4,<0.15.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pytest (>=9.0.0,<10.0.0)",
    "configargparse (>=1.7.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
